# iot-cpp

./: CMakeLists.txt  README.md  setup.sh
docs/: cpp_cli_for_devices.rst  cpp_cli_for_gateway.rst
lib/: CMakeLists.txt
samples/: CMakeLists.txt  device.cfg  gateway.cfg  sampleDevice.cpp  sampleGateway.cpp  sampleQuickstart.cpp  sslDeviceSample.cpp
src/: CMakeLists.txt  Command.h  IOTP_Client.cpp  IOTP_Client.cpp.bak  IOTP_Client.h  IOTP_Device.cpp  IOTP_Device.h  IOTP_DeviceActionHandler.cpp  IOTP_DeviceActionHandler.h  IOTP_DeviceAttributeHandler.cpp  IOTP_DeviceAttributeHandler.h  IOTP_DeviceClient.cpp  IOTP_DeviceClient.h  IOTP_DeviceFirmwareHandler.cpp  IOTP_DeviceFirmwareHandler.h  IOTP_DeviceResponseMessage.h  IOTP_GatewayClient.cpp  IOTP_GatewayClient.h  IOTP_MessageHandler.h  IOTP_ReplyMessage.h  IOTP_ResponseHandler.cpp  IOTP_ResponseHandler.h  IOTP_TopicDefinitions.h  Properties.h
test/: test.cfg  test_deviceclient.cpp  test_gatewayclient.cpp
