cmake_minimum_required(VERSION 2.8)
include_directories(mqtt)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
set(HEADER_FILES Clients.h Heap.h LinkedList.h Log.h Messages.h MQTTAsync.h MQTTClient.h MQTTClientPersistence.h MQTTPacket.h MQTTPacketOut.h MQTTPersistenceDefault.h MQTTPersistence.h MQTTProtocolClient.h MQTTProtocol.h MQTTProtocolOut.h SocketBuffer.h Socket.h SSLSocket.h StackTrace.h Thread.h Tree.h utf-8.h mqtt/async_client.h mqtt/callback.h mqtt/client.h mqtt/connect_options.h mqtt/delivery_token.h mqtt/exception.h mqtt/iaction_listener.h mqtt/iclient_persistence.h mqtt/ipersistable.h mqtt/message.h mqtt/token.h mqtt/topic.h)
add_library(async_client async_client.cpp ${HEADER_FILES})
add_library(client client.cpp ${HEADER_FILES})
add_library(iclient_persistence iclient_persistence.cpp ${HEADER_FILES})
add_library(jsoncpp jsoncpp.cpp ${HEADER_FILES})
add_library(message message.cpp ${HEADER_FILES})
add_library(token token.cpp ${HEADER_FILES})
add_library(topic topic.cpp ${HEADER_FILES})
add_library(MQTTAsync MQTTAsync.c ${HEADER_FILES})
add_library(Clients Clients.c ${HEADER_FILES})
add_library(Heap Heap.c ${HEADER_FILES})
add_library(LinkedList LinkedList.c ${HEADER_FILES})
add_library(Log Log.c ${HEADER_FILES})
add_library(Messages Messages.c ${HEADER_FILES})
add_library(MQTTClient MQTTClient.c ${HEADER_FILES})
add_library(MQTTPacket  MQTTPacket.c ${HEADER_FILES})
add_library(MQTTPacketOut MQTTPacketOut.c  ${HEADER_FILES})
add_library(MQTTPersistence MQTTPersistence.c  ${HEADER_FILES})
add_library(MQTTPersistenceDefault MQTTPersistenceDefault.c ${HEADER_FILES})
add_library(MQTTProtocolClient MQTTProtocolClient.c ${HEADER_FILES})
add_library(MQTTProtocolOut MQTTProtocolOut.c ${HEADER_FILES})
add_library(MQTTVersion MQTTVersion.c ${HEADER_FILES})
add_library(SocketBuffer SocketBuffer.c ${HEADER_FILES})
add_library(Socket Socket.c ${HEADER_FILES})
add_library(SSLSocket SSLSocket.c ${HEADER_FILES})
add_library(StackTrace StackTrace.c ${HEADER_FILES})
add_library(Thread Thread.c ${HEADER_FILES})
add_library(Tree Tree.c ${HEADER_FILES})
add_library(utf-8 utf-8.c ${HEADER_FILES})
TARGET_LINK_LIBRARIES (Log Messages)
