cmake_minimum_required(VERSION 2.8)
include_directories ("${PROJECT_SOURCE_DIR}/lib")
add_library(IOTP_Client IOTP_Client.cpp)
add_library(IOTP_DeviceClient SHARED IOTP_DeviceClient.cpp)
add_library(IOTP_GatewayClient SHARED IOTP_GatewayClient.cpp)
add_library(IOTP_Device IOTP_Device.cpp)
add_library(IOTP_DeviceActionHandler IOTP_DeviceActionHandler.cpp)
add_library(IOTP_DeviceFirmwareHandler IOTP_DeviceFirmwareHandler.cpp)
add_library(IOTP_DeviceAttributeHandler IOTP_DeviceAttributeHandler.cpp)
add_library(IOTP_ResponseHandler IOTP_ResponseHandler.cpp)
 

TARGET_LINK_LIBRARIES (IOTP_DeviceClient IOTP_Client IOTP_Device async_client client iclient_persistence jsoncpp message token topic Clients  LinkedList  Messages   MQTTClient  MQTTPacketOut    MQTTPersistenceDefault  MQTTProtocolOut  SocketBuffer  SSLSocket   Thread  utf-8 Heap     Log  MQTTAsync  MQTTPacket  MQTTPersistence  MQTTProtocolClient MQTTVersion Socket  StackTrace  Tree)
TARGET_LINK_LIBRARIES (IOTP_GatewayClient IOTP_Client async_client client iclient_persistence jsoncpp message token topic Clients  LinkedList  Messages   MQTTClient  MQTTPacketOut    MQTTPersistenceDefault  MQTTProtocolOut  SocketBuffer  SSLSocket   Thread  utf-8 Heap     Log  MQTTAsync  MQTTPacket  MQTTPersistence  MQTTProtocolClient MQTTVersion Socket  StackTrace  Tree)
#TARGET_LINK_LIBRARIES (IOTP_Device async_client client iclient_persistence jsoncpp message token topic Clients  LinkedList  Messages   MQTTClient  MQTTPacketOut    MQTTPersistenceDefault  MQTTProtocolOut  SocketBuffer  SSLSocket   Thread  utf-8 Heap     Log  MQTTAsync  MQTTPacket  MQTTPersistence  MQTTProtocolClient MQTTVersion Socket  StackTrace  Tree)
#TARGET_LINK_LIBRARIES (IOTP_Device async_client client iclient_persistence jsoncpp message token topic Clients  LinkedList  Messages   MQTTClient  MQTTPacketOut    MQTTPersistenceDefault  MQTTProtocolOut  SocketBuffer  SSLSocket   Thread  utf-8 Heap     Log  MQTTAsync  MQTTPacket  MQTTPersistence  MQTTProtocolClient MQTTVersion Socket  StackTrace  Tree)
#TARGET_LINK_LIBRARIES (iotfgwayclient mqttclient mqttlinux mqttformat  mqttpacket mqttdespublish mqttconnectclient mqttsubscribeclient mqttserpublish mqttconnectserver mqttsubscribeserver mqttunsubscribeserver mqttunsubscribeclient)
#TARGET_LINK_LIBRARIES (iotfclient mqttclient mqttlinux mqttformat  mqttpacket mqttdespublish mqttconnectclient mqttsubscribeclient mqttserpublish mqttconnectserver mqttsubscribeserver mqttunsubscribeserver mqttunsubscribeclient)
